# db_fwd

./: .gitignore  DESIGN.md  README.md  db_fwd.py  db_fwd.toml.example  pyproject.toml
tests/: test_api.py  test_cli.py  test_config.py  test_database.py  test_logging.py
